# factory-sim

./: README.md
AI/: .gitignore  README.md  chatbotgemi.py  requirements.txt
backend/: .gitignore  MANIFEST.in  app.py  pyproject.toml  requirements.txt  run.py
backend/app/: image_processor.py  routes.py  serial_handler.py
backend/debug/: requirements.txt
frontend/src/: App.tsx
frontend/src/components/: FileUpload.tsx
frontend/src/services/: api.ts
