[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-sim-backend"
version = "0.1.0"
description = "Backend for factory simulation layout converter"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["app"]
package-dir = {"" = "."}